# first-circle-code-challenge

./: .gitignore  Makefile  README.md  docker-compose.yaml
analytics/reporting/: main.py  pyproject.toml
api/: pyproject.toml
data/: tx_stream.csv  tx_stream_20200101_20240601.csv  tx_stream_20210101_20250601.csv  tx_stream_corrupted.csv
docs/: architecture.md  challenge.md  development.md
flows/: Makefile  init.sh  pyproject.toml
flows/dags/: csv2db_ingest.py  daily_user_stats.py  monthly_user_stats.py
ingestion/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
ingestion/src/ingestion/: anomaly_detection.py  config.py  dto.py  logger.py  models.py  repositories.py
ingestion/src/ingestion/entrypoints/: tx_csv2db_ingestor.py  tx_csv2stream_ingestor.py  tx_csv_gen.py  tx_stream2db_ingestor.py  tx_stream_ingestor.py
migrations/: changelog.xml
migrations/ddl/: 202506081713_init.down.sql  202506081713_init.up.sql  202506090101_init.up.sql  202506090101_reports.down.sql
migrations/seeds/: 202506081714_init_data.sql
tools/tx_csv_gen/: main.py  pyproject.toml
tools/tx_csv_to_kafka/: Makefile  main.py  pyproject.toml
