[project]
name = "ingestion"
version = "0.1.0"
description = "Set of tools used for the data ingestion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.10.0",
    "connectorx>=0.4.3",
    "dotenv>=0.9.9",
    "faker>=37.3.0",
    "polars>=1.30.0",
    "psycopg[binary]>=3.2.9",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "structlog>=25.4.0",
    "types-confluent-kafka>=1.3.3",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "jupyterlab>=4.4.3",
]
test = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "testcontainers>=4.10.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
tx_stream2db_ingestor = "ingestion.entrypoints.tx_stream2db_ingestor:main"
tx_csv_gen = "ingestion.entrypoints.tx_csv_gen:main"
tx_csv2db_ingestor = "ingestion.entrypoints.tx_csv2db_ingestor:main"
tx_csv2stream_ingestor = "ingestion.entrypoints.tx_csv2stream_ingestor:main"
