[project]
name = "reporting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
test = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
