[project]
name = "tx-csv-to-kafka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.10.0",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
test = [
    "mypy>=1.16.0",
    "ruff>=0.11.13",
]
